[package]
name = "rust_jwt"
version = "0.1.0"
authors = ["Joe Hance <jwh20@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
jsonwebtokens = "1.0.0-alpha.13"
openssl = "0.10.33"
serde_json = "1.0.64"
clap = "3.0.0-beta.2"